--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A boilerplate for a Koa Redux React application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "webserver": "node api/src/server.js",
+    "build": "node_modules/.bin/webpack",
+    "dev": "node_modules/.bin/webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -23,5 +25,19 @@
   "bugs": {
     "url": "https://github.com/gulshansainis/koa-redux-react-boilerplate/issues"
   },
-  "homepage": "https://github.com/gulshansainis/koa-redux-react-boilerplate#readme"
+  "homepage": "https://github.com/gulshansainis/koa-redux-react-boilerplate#readme",
+  "dependencies": {
+    "babel-core": "^6.26.3",
+    "koa": "^2.6.2",
+    "koa-cors": "0.0.16",
+    "koa-route": "^3.2.0",
+    "mongoose": "^5.3.11"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-template": "^6.2.0",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
+  }
 }
